package pt.isep.psoft.alsafe.flightroutes.domain;

public enum RouteStatus {
    ACTIVE,
    DEACTIVATED
}