@startuml US110-CD
skinparam classAttributeIconSize 0

package "api" {
    class FlightRouteController {
        + createRoute(dto: CreateFlightRouteDTO): ResponseEntity<FlightRouteResponseDTO>
    }
    class CreateFlightRouteDTO {
        - originIata: String
        - destinationIata: String
        - distance: Double
        - estimatedFlightTime: Integer
        - minRangeRequired: Double
        - minCapacityRequired: Integer
    }
    class FlightRouteResponseDTO
}

package "services" {
    class FlightRouteService {
        + createFlightRoute(dto: CreateFlightRouteDTO): FlightRoute
    }
}

package "airportmanagement.services" {
    class AirportService {
        + getAirportDetails(iata: String): Airport
    }
}

package "repositories" {
    interface FlightRouteRepository {
        + save(route: FlightRoute): FlightRoute
    }
}

package "domain" {
    class FlightRoute <<Aggregate Root>> <<Entity>> {
        - distance: Double
        - estimatedFlightTime: Integer
        - version: Long
        + FlightRoute(id: String, origin: Airport, dest: Airport, distance: Double, time: Integer, req: RouteRequirement, author: String)
    }
    class RouteId <<Value Object>>
    class RouteRequirement <<Value Object>>
    class RouteHistory <<Value Object>>
    enum RouteStatus <<Enum>> {
        ACTIVE
        DEACTIVATED
    }
}

FlightRouteController ..> CreateFlightRouteDTO
FlightRouteController ..> FlightRouteResponseDTO
FlightRouteController --> FlightRouteService : delegates to
FlightRouteService --> AirportService : uses
FlightRouteService --> FlightRouteRepository : uses
FlightRouteService ..> FlightRoute : creates
FlightRoute "1" *-- "1" RouteId : identified by >
FlightRoute "1" *-- "1" RouteRequirement : defined by >
FlightRoute "1" *-- "0..*" RouteHistory : tracked by >
FlightRoute "1" *-- "1" RouteStatus : current status >

@enduml